...
      {/* Top Bar */}
      <View
        className="flex-row items-center justify-between pb-2"
        style={{ paddingHorizontal: horizontalPadding, paddingTop: contentPaddingTop }}
      >
        <Button
          testID="e2e-action-editor__param_id-back"
          size="sm"
          variant="outline"
          onPress={onBack}
        >
          <Ionicons name="arrow-back" size={16} color={mutedColor} />
        </Button>
...
