...
    if (result) {
      handleSearchSelect(result.latitude, result.longitude);
    }
  }, [searchQuery, handleSearchSelect]);

  return (
    <View testID="e2e-screen-map__index" className="flex-1 bg-background">
      <View
        className="absolute top-0 z-10 pb-2"
        style={{
          backgroundColor: `${bgColor}CC`,
          paddingHorizontal: horizontalPadding,
          paddingTop: contentPaddingTop,
...
